--- a/_config.yml
+++ b/_config.yml
@@ -1,41 +1,26 @@
+# Dependencies
+markdown:         redcarpet
+highlighter:      pygments
+
+# Permalinks
+permalink:        pretty
+relative_permalinks: true
+
 # Setup
-title: Poole
-tagline: The Jekyll Butler
-url: https://getpoole.com
-paginate: 1
-baseurl: "/hooray.community"
-permalink: pretty
+title:            HooRay!
+tagline:          'Brakujące ogniwo między HR a IT'
+description:      'Społeczność ludzi zjednoczonych wokół ludzi.'
+url:              hooray.community
+baseurl:          /hooray.community
 
-# Gems
-plugins:
-  - jekyll-gist
-  - jekyll-paginate
-  - jekyll-seo-tag
-
-# Optimize Jekyll
-exclude:
-  - .editorconfig
-  - .git
-  - .jekyll-cache
-  - Gemfile
-  - Gemfile.lock
-  - LICENSE.md
-  - README.md
-
-sass:
-  sass_dir: _sass
-  style: :compressed
-
-# Options
-
-# Replace this value and uncomment to enable Google Analytics tracking
-# ga_analytics: UA-000000-0
-
-# Specify the author for blog posts
 author:
-  name: Mark Otto
-  url: https://twitter.com/mdo
-  email: markdotto@gmail.com
+  name:           Krzysztof (Chris) Miaskowski
+  url:            https://www.linkedin.com/in/krzysztof-miaskowski/
+
+paginate:         5
 
 # Custom vars
-version: 3.0.0
+version:          1.0.0-beta
+
+github:
+  repo:           https://github.com/hooray-community/hooray.community
